...
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/youtube_recyclerview"
        app:layout_constraintEnd_toStartOf="@+id/youtube_skip_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1/1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/youtube_recyclerview"
...
